--- a/app/src/main/res/layout/item_visa_types.xml
+++ b/app/src/main/res/layout/item_visa_types.xml
@@ -5,6 +5,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="wrap_content">
+
     <androidx.cardview.widget.CardView
         android:layout_width="@dimen/_90sdp"
         android:layout_height="wrap_content"
@@ -36,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_3sdp"
                 android:textColor="@color/text_color_blue"
-                android:textSize="@dimen/_12sdp"
+                android:textSize="@dimen/_11sdp"
                 android:maxLines="1"
                 android:ellipsize="end"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -47,5 +53,5 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
