--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="card_background">#DFDFDF</color>
+    <color name="background">#DFDFDF</color>
     <color name="text_color_blue">#3F51B5</color>
 </resources>
