--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="background">#DFDFDF</color>
     <color name="text_color_blue">#3F51B5</color>
+    <color name="card_background_red">#FD6C6C</color>
 </resources>
