--- a/app/src/main/res/drawable/bg_spinner.xml
+++ b/app/src/main/res/drawable/bg_spinner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D8D8D8" />
+    <solid android:color="@color/white" />
     <stroke
         android:width="@dimen/_1sdp"
         android:color="?colorPrimary" />
